fix:fix css on mobile version

--- a/cssMemeSlider/style.css
+++ b/cssMemeSlider/style.css
@@ -20,6 +20,7 @@
 }
 
 .slider__input {
+  position: absolute;
   display: none;
 }
 .slider__button {
@@ -45,8 +46,7 @@
   background: none;
 }
 .slider__description--wrapper {
-  width: 400%;
-
+  width: 620px;
   overflow: hidden;
 }
 .slider__descriptions {
@@ -84,6 +84,10 @@
   .slider__wrapper {
     width: 400px;
     height: 400px;
+  }
+  .slider__description--wrapper {
+    width: 400px;
+    overflow: hidden;
   }
   .container {
     width: 400px;
